fixed overflow
Done : 
    - make the 'create task' button sticky position  , same for the search bar

--- a/src/assets/css/myframework.css
+++ b/src/assets/css/myframework.css
@@ -190,7 +190,7 @@ body {
   flex-wrap: wrap;
 }
 
-.view-btn {
+.new-task{
   background: #ff9838;
   border: none;
   color: white;
@@ -368,4 +368,26 @@ div:has(>.member-item){
 div:has(.tools) .tools {
     overflow-y : auto;
     min-height: 155px;
+}
+
+.search-row , .topbar button {
+    position: sticky;
+}
+.search-row {
+    top : 0;
+}
+.topbar button{
+    top : 70px;
+}
+.topbar h3 {
+    position: relative !important;
+}
+.search-row  {
+    outline: solid 2px  ;
+}
+
+.search-row .filters span {
+    outline: solid 2px;
+    padding: 6px;
+    border-radius: 7px;
 }
